[gd_scene load_steps=50 format=3 uid="uid://diah1045fuaax"]

[ext_resource type="PackedScene" uid="uid://6wqxmw2vokg2" path="res://characters/enemies/enemy_base.tscn" id="1_gm2id"]
[ext_resource type="Texture2D" uid="uid://c0hc36h8lfd48" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Idle_4.png" id="2_e8rgn"]
[ext_resource type="Texture2D" uid="uid://ch7bw2vsp4gkx" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Attack2_6.png" id="2_m1mfu"]
[ext_resource type="Script" path="res://characters/enemies/owlet/owlet.gd" id="2_uc0uy"]
[ext_resource type="Texture2D" uid="uid://ra6t0ef2aq4w" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Run_6.png" id="3_65pxb"]
[ext_resource type="Script" path="res://characters/enemies/states/chase_a_star.gd" id="4_w7ghj"]
[ext_resource type="Script" path="res://characters/enemies/states/idle_walking.gd" id="5_7yjiw"]
[ext_resource type="Script" path="res://characters/enemies/states/attack.gd" id="5_t08sr"]
[ext_resource type="Texture2D" uid="uid://7wlmyhxeu4f5" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Hurt_4.png" id="6_o2yey"]
[ext_resource type="Texture2D" uid="uid://cw661u0yf0tmy" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Death_8.png" id="8_pqd1v"]
[ext_resource type="Texture2D" uid="uid://c750tdks5nn6l" path="res://characters/enemies/owlet/imgs/Owlet_Monster_Walk_6.png" id="11_d4w7a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ufpni"]
radius = 7.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxtym"]
size = Vector2(52, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_0offr"]
radius = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4m7cr"]
atlas = ExtResource("2_m1mfu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyrcx"]
atlas = ExtResource("2_m1mfu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7vf5"]
atlas = ExtResource("2_m1mfu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3qm3"]
atlas = ExtResource("2_m1mfu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c8d5"]
atlas = ExtResource("2_m1mfu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewgjc"]
atlas = ExtResource("2_m1mfu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7facr"]
atlas = ExtResource("6_o2yey")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4wup"]
atlas = ExtResource("6_o2yey")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fay17"]
atlas = ExtResource("6_o2yey")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjenn"]
atlas = ExtResource("6_o2yey")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm63h"]
atlas = ExtResource("8_pqd1v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pt0j"]
atlas = ExtResource("8_pqd1v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uahy"]
atlas = ExtResource("8_pqd1v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le0rv"]
atlas = ExtResource("8_pqd1v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1xnp"]
atlas = ExtResource("8_pqd1v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyfgb"]
atlas = ExtResource("8_pqd1v")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6c5m"]
atlas = ExtResource("8_pqd1v")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0huk"]
atlas = ExtResource("8_pqd1v")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wi2t"]
atlas = ExtResource("2_e8rgn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp4ft"]
atlas = ExtResource("2_e8rgn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5baqb"]
atlas = ExtResource("2_e8rgn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_160i4"]
atlas = ExtResource("2_e8rgn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umxg6"]
atlas = ExtResource("3_65pxb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82tmw"]
atlas = ExtResource("3_65pxb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fye2e"]
atlas = ExtResource("3_65pxb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f36c"]
atlas = ExtResource("3_65pxb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6bvm"]
atlas = ExtResource("3_65pxb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_damjg"]
atlas = ExtResource("3_65pxb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7esj"]
atlas = ExtResource("11_d4w7a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbj8x"]
atlas = ExtResource("11_d4w7a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryljj"]
atlas = ExtResource("11_d4w7a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woxln"]
atlas = ExtResource("11_d4w7a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltqqe"]
atlas = ExtResource("11_d4w7a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clh1w"]
atlas = ExtResource("11_d4w7a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_py3r5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m7cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyrcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7vf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3qm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c8d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewgjc")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7facr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4wup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fay17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjenn")
}],
"loop": false,
"name": &"damage",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm63h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pt0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uahy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le0rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1xnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyfgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6c5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0huk")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wi2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp4ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5baqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_160i4")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umxg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82tmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fye2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6bvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_damjg")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7esj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbj8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryljj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woxln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltqqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clh1w")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[node name="Owlet" node_paths=PackedStringArray("animation_sprites") instance=ExtResource("1_gm2id")]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2_uc0uy")
animation_sprites = NodePath("Animation")

[node name="PhysicCollision" parent="." index="0"]
position = Vector2(-1, 9)
shape = SubResource("CapsuleShape2D_ufpni")

[node name="Health" parent="." index="1"]
position = Vector2(0, -19)
scale = Vector2(0.465, 0.465)

[node name="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2(-2, 3)
shape = SubResource("RectangleShape2D_bxtym")

[node name="HitBox" parent="." index="3"]
visible = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-2, 3)
shape = SubResource("CircleShape2D_0offr")

[node name="StateMachine" parent="." index="4" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("idle_walking")

[node name="chase_a_star" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("navigation_agent")]
script = ExtResource("4_w7ghj")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="attack" type="Node" parent="StateMachine" index="1"]
script = ExtResource("5_t08sr")

[node name="idle_walking" type="Node" parent="StateMachine" index="2"]
script = ExtResource("5_7yjiw")
debug = true

[node name="Animation" type="AnimatedSprite2D" parent="." index="5"]
sprite_frames = SubResource("SpriteFrames_py3r5")
animation = &"walk"
metadata/_edit_lock_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="6"]
debug_enabled = true

[connection signal="damage_taken" from="HitBox" to="." method="_on_hit_box_damage_taken"]
[connection signal="player_next_to_enemy" from="StateMachine/chase_a_star" to="." method="_on_chase_a_star_player_next_to_enemy"]
[connection signal="player_too_far" from="StateMachine/chase_a_star" to="." method="_on_chase_a_star_player_too_far"]
[connection signal="attack_finished" from="StateMachine/attack" to="." method="_on_attack_finished"]
[connection signal="next_to_player" from="StateMachine/idle_walking" to="." method="_on_idle_next_to_player"]
